chore: relax SummaryJavadoc checkstyle and document FX modules
What changed:
- Removed restrictive forbiddenSummaryFragments from SummaryJavadoc in checkstyle.xml.
- Added JavaDoc and必要的 imports in AbilityFxDispatcher and FxDefinition to support a new FX execution method and Definition record.

Why:
- Streamlines code documentation while retaining checks, enabling richer FX effects without false positives.